# Universal-DllMain

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  QUICKSTART.md  README.md  build.bat  build.sh  generate_vs_project.bat
examples/: usage_example.cpp
include/: nocrt.h  universal_dll.h
src/: dllmain.cpp
